k8s/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webhook-proxy
  labels:
    app: webhook-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webhook-proxy
  template:
    metadata:
      labels:
        app: webhook-proxy
    spec:
      containers:
        - name: app
          image: gleisonem/webhook-proxy-go:latest # Replace with your dockerhub username if different
          imagePullPolicy: Always
          ports:
            - containerPort: 8095
              name: http
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: webhook-proxy
spec:
  ports:
    - port: 80
      targetPort: 8095
      name: http
  selector:
    app: webhook-proxy
